fj/src/test/resources/tests/inh-overriding4.fj
class A extends Object {
  A() {
    super();
  }
  A mk(Object o1) {
    return new A();
  }
}
class B extends A {
  B() {
    super();
  }
  A mk(Object o1, Object o2) {
    return new B();
  }
}
new B().mk(new Object(), new Object())
